1.2.2 (not yet released):
- Improve the Perldoc documentation.
- Fix a problem when querying the OPKGs available by default for the local 
distribution.
- Improve the orm man page and revisit the --help option.

1.2.1:
- Fix a problem when using OS_Detect.
- Modify the Makefile so we can choose the directory to save sources when
creating RPMs.
- Modify the Makefile so we can choose the directory where the binary packages
are stored.
- Enable the creation of unsigned Debian packages by setting the
UNSIGNED_OSCAR_PKG environment variable.

1.2:
- Improve error handling.
- Improve the spec file.
- Improve the Makefile.

1.1:
- Add a spec file for the creation of a RPM for ORM (use "make rpm" to create
it).
- Add the missing top-level Makefile.
- Improve the man page for the ORM script.
- Add the automatic generation and installation of man pages for all ORM.
scripts.
- Add the capability of package install using the orm script (see the orm
manpage for more details).

1.0:
- Separate ORM from the rest of the OSCAR code.
